I started styling the website for mobile firstly

--- a/index.html
+++ b/index.html
@@ -1,85 +1,123 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Insure landing page</title>
 
+  <title>Frontend Mentor | Insure landing page</title>
+  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap" rel="stylesheet">
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+    .attribution {
+      font-size: 11px;
+      text-align: center;
+    }
+
+    .attribution a {
+      color: hsl(228, 45%, 44%);
+    }
   </style>
 </head>
+
 <body>
+  <!-- nav -->
+  <nav>
+    <img src="./images/logo.svg" alt="logo">
+    <img src="./images/icon-hamburger.svg" alt="open-menu">
+    <ul>
+      <li><a href="#">How we work</a></li>
+      <li><a href="#">Blog</a></li>
+      <li><a href="#">Account</a></li>
+      <li><a href="#">View plans</a></li>
+    </ul>
+  </nav>
 
-  How we work
-  Blog
-  Account
-  View plans
+  <!-- header -->
+  <header>
+    <img src="./images/image-intro-mobile.jpg" alt="family with the kids">
+    <div class="information">
+      <h1>Humanizing your insurance.</h1>
+      <p>Get your life insurance coverage easier and faster. We blend our expertise
+        and technology to help you find the plan that’s right for you. Ensure you
+        and your loved ones are protected.</p>
+      <button>View plans</button>
+    </div>
+  </header>
 
-  Humanizing your insurance.
+  <!-- section -->
+  <section>
+    <h1>We’re different</h1>
 
-  Get your life insurance coverage easier and faster. We blend our expertise 
-  and technology to help you find the plan that’s right for you. Ensure you 
-  and your loved ones are protected.
+    <div class="card">
+      <img src="./images/icon-snappy-process.svg" alt="snappy-proceess">
+      <h2>Snappy Process</h2>
+      <p>Our application process can be completed in minutes, not hours. Don’t get
+        stuck filling in tedious forms.</p>
+    </div>
+    <div class="card">
+      <img src="./images/icon-affordable-prices.svg" alt="affordable-prices">
+      <h2>Affordable Prices</h2>
+      <p>We don’t want you worrying about high monthly costs. Our prices may be low,
+        but we still offer the best coverage possible.</p>
+    </div>
+    <div class="card">
+      <img src="./images/icon-people-first.svg" alt="people-first">
+      <h2>People First</h2>
+      <p>Our plans aren’t full of conditions and clauses to prevent payouts. We make
+        sure you’re covered when you need it.</p>
+    </div>
+  </section>
 
-  View plans
+  <!-- advertisment -->
+  <div class="ad">
+    <h2>Find out more about how we work</h2>
+    <button>How we work</button>
+  </div>
 
-  We’re different
+  <!-- footer -->
+  <footer>
+    <div class="social-media">
+      <img src="./images/logo.svg" alt="logo">
+      <a href="#"><img src="./images/icon-facebook.svg" alt="facebook"></a>
+      <a href="#"><img src="./images/icon-twitter.svg" alt="twitter"></a>
+      <a href="#"><img src="./images/icon-pinterest.svg" alt="pinterest"></a>
+      <a href="#"><img src="./images/icon-instagram.svg" alt="instagram"></a>
+    </div>
 
-  Snappy Process
+    <h3>Our company</h3>
+    <p>How we work</p>
+    <p>Why Insure?</p>
+    <p>View plans</p>
+    <p>Reviews</p>
 
-  Our application process can be completed in minutes, not hours. Don’t get 
-  stuck filling in tedious forms.
+    <h3>Help me</h3>
+    <p>FAQ</p>
+    <p>Terms of use</p>
+    <p>Privacy policy</p>
+    <p>Cookies</p>
 
-  Affordable Prices
+    <h3>Contact</h3>
+    <p>Sales</p>
+    <p>Support</p>
+    <p>Live chat</p>
 
-  We don’t want you worrying about high monthly costs. Our prices may be low, 
-  but we still offer the best coverage possible.
+    <h3>Others</h3>
+    <p>Careers</p>
+    <p>Press</p>
+    <p>Licenses</p>
+  </footer>
 
-  People First
 
-  Our plans aren’t full of conditions and clauses to prevent payouts. We make 
-  sure you’re covered when you need it.
-
-  Find out more about how we work
-
-  How we work
-
-  Our company
-
-  How we work
-  Why Insure?
-  View plans
-  Reviews
-
-  Help me
-
-  FAQ
-  Terms of use
-  Privacy policy
-  Cookies
-
-  Contact
-
-  Sales
-  Support
-  Live chat
-
-  Others
-
-  Careers
-  Press
-  Licenses
-
-  
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Your Name Here</a>.
   </div>
 </body>
+
 </html>
