--- a/index.html
+++ b/index.html
@@ -84,11 +84,13 @@
   <!-- footer -->
   <footer>
     <div class="social-media">
-      <img src="./images/logo.svg" alt="logo">
-      <a href="#"><img src="./images/icon-facebook.svg" alt="facebook"></a>
-      <a href="#"><img src="./images/icon-twitter.svg" alt="twitter"></a>
-      <a href="#"><img src="./images/icon-pinterest.svg" alt="pinterest"></a>
-      <a href="#"><img src="./images/icon-instagram.svg" alt="instagram"></a>
+      <span> <img src="./images/logo.svg" alt="logo"></span>
+      <span>
+        <a href="#"><img src="./images/icon-facebook.svg" alt="facebook"></a>
+        <a href="#"><img src="./images/icon-twitter.svg" alt="twitter"></a>
+        <a href="#"><img src="./images/icon-pinterest.svg" alt="pinterest"></a>
+        <a href="#"><img src="./images/icon-instagram.svg" alt="instagram"></a>
+      </span>
     </div>
 
     <h3>Our company</h3>
