i did a background image fit

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
   <!-- header -->
   <header>
-    <img src="./images/image-intro-mobile.jpg" alt="family with the kids">
+    <div class="family-intro"></div>
     <div class="information">
       <h1>Humanizing your insurance.</h1>
       <p>Get your life insurance coverage easier and faster. We blend our expertise
@@ -48,6 +48,8 @@
         and your loved ones are protected.</p>
       <button>View plans</button>
     </div>
+
+    <div class="intro__backgrounds"></div>
   </header>
 
   <!-- section -->
