--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
   <!-- nav -->
   <nav>
     <img src="./images/logo.svg" alt="logo">
-    <img src="./images/icon-hamburger.svg" alt="open-menu">
-    <ul>
+    <div class="menu-img"></div>
+    <ul class="active">
       <li><a href="#">How we work</a></li>
       <li><a href="#">Blog</a></li>
       <li><a href="#">Account</a></li>
