js menu show and hide on click and hover on touch screen

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <body>
   <!-- nav -->
   <nav>
-    <img src="./images/logo.svg" alt="logo" class="menubutton">
+    <img src="./images/logo.svg" alt="logo">
     <div class="menu-img"></div>
     <ul class="active">
       <li><a href="#">How we work</a></li>
