--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <title>Frontend Mentor | Insure landing page</title>
   <link rel="stylesheet" href="style.css">
-  <script type="text/javascript" src="./javascript.js"></script>
+  <!--<script type="text/javascript" src="./javascript.js"></script>-->
   <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap" rel="stylesheet">
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
