i finish a rwd for max width 992px and i started making rwd for higer resolution

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <title>Frontend Mentor | Insure landing page</title>
   <link rel="stylesheet" href="./assets/css/style.css">
-  <script type="text/javascript" src="./assets/javascript/javascript.js"></script>
+  <script type="text/javascript" src="./assets/javascrript/javascript.js"></script>
   <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap" rel="stylesheet">
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -41,7 +41,9 @@
 
   <!-- header -->
   <header>
-    <div class="family-intro"></div>
+    <div class="family-intro">
+      <!--<img src="./images/image-intro-desktop.jpg" width="100%" height="auto" alt="family">-->
+    </div>
     <div class="information">
       <h1>Humanizing your insurance.</h1>
       <p>Get your life insurance coverage easier and faster. We blend our expertise
@@ -95,28 +97,34 @@
         <a href="#"><img src="./images/icon-instagram.svg" alt="instagram"></a>
       </span>
     </div>
-
-    <h3>Our company</h3>
-    <p>How we work</p>
-    <p>Why Insure?</p>
-    <p>View plans</p>
-    <p>Reviews</p>
-
-    <h3>Help me</h3>
-    <p>FAQ</p>
-    <p>Terms of use</p>
-    <p>Privacy policy</p>
-    <p>Cookies</p>
-
-    <h3>Contact</h3>
-    <p>Sales</p>
-    <p>Support</p>
-    <p>Live chat</p>
-
-    <h3>Others</h3>
-    <p>Careers</p>
-    <p>Press</p>
-    <p>Licenses</p>
+    <div class="footer-span">
+      <span>
+        <h3>Our company</h3>
+        <p>How we work</p>
+        <p>Why Insure?</p>
+        <p>View plans</p>
+        <p>Reviews</p>
+      </span>
+      <span>
+        <h3>Help me</h3>
+        <p>FAQ</p>
+        <p>Terms of use</p>
+        <p>Privacy policy</p>
+        <p>Cookies</p>
+      </span>
+      <span>
+        <h3>Contact</h3>
+        <p>Sales</p>
+        <p>Support</p>
+        <p>Live chat</p>
+      </span>
+      <span>
+        <h3>Others</h3>
+        <p>Careers</p>
+        <p>Press</p>
+        <p>Licenses</p>
+      </span>
+    </div>
   </footer>
 
 
