i done a rwd for ipad and devices with more than 992px width

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
       <!--<img src="./images/image-intro-desktop.jpg" width="100%" height="auto" alt="family">-->
     </div>
     <div class="information">
+      <hr>
       <h1>Humanizing your insurance.</h1>
       <p>Get your life insurance coverage easier and faster. We blend our expertise
         and technology to help you find the plan that’s right for you. Ensure you
@@ -59,25 +60,26 @@
   <section>
     <hr>
     <h1>We’re different</h1>
-
-    <div class="card">
-      <img src="./images/icon-snappy-process.svg" alt="snappy-proceess">
-      <h2>Snappy Process</h2>
-      <p>Our application process can be completed in minutes, not hours. Don’t get
-        stuck filling in tedious forms.</p>
-    </div>
-    <div class="card">
-      <img src="./images/icon-affordable-prices.svg" alt="affordable-prices">
-      <h2>Affordable Prices</h2>
-      <p>We don’t want you worrying about high monthly costs. Our prices may be low,
-        but we still offer the best coverage possible.</p>
-    </div>
-    <div class="card">
-      <img src="./images/icon-people-first.svg" alt="people-first">
-      <h2>People First</h2>
-      <p>Our plans aren’t full of conditions and clauses to prevent payouts. We make
-        sure you’re covered when you need it.</p>
-    </div>
+    <span>
+      <div class="card">
+        <img src="./images/icon-snappy-process.svg" alt="snappy-proceess">
+        <h2>Snappy Process</h2>
+        <p>Our application process can be completed in minutes, not hours. Don’t get
+          stuck filling in tedious forms.</p>
+      </div>
+      <div class="card">
+        <img src="./images/icon-affordable-prices.svg" alt="affordable-prices">
+        <h2>Affordable Prices</h2>
+        <p>We don’t want you worrying about high monthly costs. Our prices may be low,
+          but we still offer the best coverage possible.</p>
+      </div>
+      <div class="card">
+        <img src="./images/icon-people-first.svg" alt="people-first">
+        <h2>People First</h2>
+        <p>Our plans aren’t full of conditions and clauses to prevent payouts. We make
+          sure you’re covered when you need it.</p>
+      </div>
+    </span>
   </section>
 
   <!-- advertisment -->
