i almost finish a responsice web design

--- a/index.html
+++ b/index.html
@@ -41,17 +41,19 @@
 
   <!-- header -->
   <header>
-    <div class="family-intro">
-      <!--<img src="./images/image-intro-desktop.jpg" width="100%" height="auto" alt="family">-->
-    </div>
-    <div class="information">
-      <hr>
-      <h1>Humanizing your insurance.</h1>
-      <p>Get your life insurance coverage easier and faster. We blend our expertise
-        and technology to help you find the plan that’s right for you. Ensure you
-        and your loved ones are protected.</p>
-      <button>View plans</button>
-    </div>
+    <span>
+      <div class="family-intro">
+        <!--<img src="./images/image-intro-desktop.jpg" width="100%" height="auto" alt="family">-->
+      </div>
+      <div class="information">
+        <hr>
+        <h1>Humanizing your insurance.</h1>
+        <p>Get your life insurance coverage easier and faster. We blend our expertise
+          and technology to help you find the plan that’s right for you. Ensure you
+          and your loved ones are protected.</p>
+        <button>View plans</button>
+      </div>
+    </span>
 
     <div class="intro__backgrounds"></div>
   </header>
